[[bin]]
name = "signalelixir"
path = "src/main.rs"

[dependencies]
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
snafu = { version = "0.7.0"}

[dependencies.request-rust]
git = "https://github.com/lamhai1401/request-rust"
tag = "v0.0.1"

[lib]
name = "signalelixir"

[package]
name = "signal-elixir"
version = "0.1.0"
edition = "2018"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
default-run = "signalelixir"
readme = "README.md"
homepage = "github.com/lamhai1401/signal-elixir"
repository = "github.com/lamhai1401/signal-elixir"
